<resources>
    <string name="app_name">LeftorTest</string>
    <string name="welcome_text">Loading application...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">FRAGMENT #</string>
    <string name="add_new_task">Add new task</string>
    <string name="add_new_group">Add new group</string>
    <string name="title">First Task</string>
    <string name="description">First Task Description</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="enter_task_description">Enter task description</string>
    <string name="enter_task_group">Enter task group</string>
    <string name="save_btn">Save</string>
    <string name="select_task_group">Select task group</string>
    <string name="task_dialog_add_task_btn">Add task</string>
    <string name="task_dialog_add_group_btn">Add group</string>
    <string name="task_dialog_quit_group_btn">Odustani</string>
    <string name="task_dialog_quit_task_btn">Odustani</string>
    <string name="due_date_txt_view">Due date</string>


</resources>
