<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/task_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/task_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_below="@+id/task_title"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/due_date_txt_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/task_description"
        android:textSize="16sp"
        android:text="@string/due_date_txt_view"/>

    <TextView
        android:id="@+id/priority_txt_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/due_date_txt_view"
        android:textSize="16sp"/>
</RelativeLayout>